# zksnake

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml
benchmarks/: benchmark_groth16.py  benchmark_plonk.py  benchmark_script.py
examples/: example_bitify_circom.py  example_mimc_hash.py  example_mimc_hash_precompiled.py  example_poseidon.py  example_poseidon_circom.py  example_range_proof.py  example_rsa.py  mimc.py
examples/circom/: num2bits.circom  poseidon.circom  poseidon.r1cs
python/zksnake/: array.py  constant.py  ecc.py  parser.py  polynomial.py  qap.py  r1cs.py  symbolic.py  transcript.py  utils.py
python/zksnake/arithmetization/: __init__.py  constraints.py  layered_circuit.py  plonkish.py  r1cs.py
python/zksnake/bulletproofs/: ipa.py  range_proof.py
python/zksnake/commitment/polynomial/: __init__.py  base.py  ipa.py  kzg.py  pedersen.py
python/zksnake/commitment/vector/: __init__.py  base.py  merkle.py
python/zksnake/gadgets/: __init__.py  binsum.py  bitify.py  bitwise.py  cmp.py  compconstant.py  mimc.py  poseidon.py
python/zksnake/gadgets/hash/: poseidon.py
python/zksnake/gadgets/hash/constants/: poseidon_bn254.py
python/zksnake/groth16/: __init__.py  protocol.py  prover.py  qap.py  serialization.py  setup.py  verifier.py
python/zksnake/plonk/: __init__.py  protocol.py  prover.py  serialization.py  setup.py  verifier.py
python/zksnake/subprotocol/: gkr.py  sumcheck.py
python/zksnake/subprotocol/bulletproofs/: __init__.py  ipa.py  range_proof.py
src/: array.rs  lib.rs
src/arithmetization/: circuit.rs  mod.rs  plonkish.rs  r1cs.rs  symbolic.rs
src/bls12_381/: curve.rs  mle.rs  mod.rs  polynomial.rs
src/bn254/: curve.rs  mle.rs  polynomial.rs
src/zksnake/: ecc.py  ntt.py  optimized_polynomial.py  polynomial.py  qap.py  r1cs.py  symbolic.py  utils.py
src/zksnake/groth16/: prover.py  setup.py  verifier.py
src/zksnake/polynomial/: __init__.py  optimized_polynomial.py  polynomial.py
tests/: test_algebra.py  test_bulletproofs.py  test_commitment.py  test_gadgets.py  test_gkr.py  test_groth16.py  test_plonk.py  test_r1cs_qap.py  test_symbolic.py
tests/stub/: test_poseidon.circom  test_poseidon.sym
