[package]
name = "zksnake"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zksnake"
crate-type = ["cdylib"]

[dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-std = "0.4.0"
bincode = "1.3.3"
num-bigint = "0.4.5"
pyo3 = {version = "0.23.5", features = ["num-bigint"] }
rayon = "1.10.0"
serde = {version="1.0.200", features = ["derive"]}
ark-serialize = { version = "0.4", features = ["derive"] }
ark-bls12-381 = "0.4.0"
sha2 = "0.10.8"
bn254_hash2curve = "0.1.2"

[features]
parallel = ["ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel"]
